build_errors_utf8.txt
cargo :    Compiling 
ai-core v0.1.0 (C:\Users\a
arus\Desktop\model-checker
\ai-core)
At line:1 char:1
+ cargo check > 
build_errors.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
    Compiling ai...heck   
 er\ai-core):String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
    Checking 
model-checker v0.1.0 (C:\U
sers\aarus\Desktop\model-c
hecker)
error[E0597]: 
`models_registry` does 
not live long enough
   --> src\neural_engines.
rs:24:39
    |
  6 |     let mut 
models_registry = use_cont
ext::<Signal<Models>>();
    |         
------------------- 
binding `models_registry` 
declared here
...
 24 |                 for 
(index, model) in models_r
egistry.read().models.iter
().enumerate() {
    |                     
                  
^^^^^^^^^^^^^^^ borrowed 
value does not live long 
enough
...
 79 |                     
                oninput: 
move |e| {
    |                     
                         
---- argument requires 
that `models_registry` is 
borrowed for `'static`
...
112 | }
    | - `models_registry` 
dropped here while still 
borrowed
    |
note: requirement that 
the value outlives 
`'static` introduced here
   --> C:\Users\aarus\.rus
tup\toolchains\stable-x86_
64-pc-windows-msvc\lib/rus
tlib/src/rust\library\core
\src\iter\traits\iterator.
rs:780:12
    |
780 |         F: 
FnMut(Self::Item) -> B,
    |            
^^^^^^^^^^^^^^^^^^^^^^

error[E0716]: temporary 
value dropped while 
borrowed
   --> src\neural_engines.
rs:24:39
    |
 24 |                 for 
(index, model) in models_r
egistry.read().models.iter
().enumerate() {
    |                     
                  
^^^^^^^^^^^^^^^^^^^^^^ 
creates a temporary value 
which is freed while 
still in use
...
 79 |                     
                oninput: 
move |e| {
    |                     
                         
---- argument requires 
that borrow lasts for 
`'static`
...
111 |     }
    |     - temporary 
value is freed at the end 
of this statement
    |
note: requirement that 
the value outlives 
`'static` introduced here
   --> C:\Users\aarus\.rus
tup\toolchains\stable-x86_
64-pc-windows-msvc\lib/rus
tlib/src/rust\library\core
\src\iter\traits\iterator.
rs:780:12
    |
780 |         F: 
FnMut(Self::Item) -> B,
    |            
^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed 
explanations: E0597, 
E0716.
For more information 
about an error, try 
`rustc --explain E0597`.
error: could not compile 
`model-checker` (bin 
"model-checker") due to 2 
previous errors
